--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico"/>
+    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
     <!-- Styles-->
     <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script type="text/javascript">
+      try{Typekit.load();}catch(e){};
+      window.localAssets = false;
+    </script>
     <script src="http://static.nkwalton.com/js/init.min.js"></script>
   </head>
   <body class="home">
