--- a/students.html
+++ b/students.html
@@ -9,12 +9,15 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico"/>
+    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
     <!-- Styles-->
     <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <script type="text/javascript">
+      try{Typekit.load();}catch(e){};
+      window.localAssets = false;
+    </script>
     <script src="http://static.nkwalton.com/js/init.min.js"></script>
   </head>
   <body class="teaching">
@@ -24,7 +27,7 @@
         <!-- a.contact(href="/contact" + extension) Find me-->
       </nav>
     </header>
-    <div class="main portfolio show-info">
+    <div class="main portfolio">
       <nav><a href="#" class="ir next">Next slide</a><a href="#" class="ir prev">Previous slide</a></nav>
       <div id="intro" data-project="0" class="project">
         <div class="title">
@@ -228,6 +231,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Travel Poster</h3>
+                <ul>
+                  <li>Fall 2008</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -260,6 +267,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -276,6 +287,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -292,6 +307,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -308,6 +327,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -324,6 +347,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -340,6 +367,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -356,6 +387,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -372,6 +407,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -388,6 +427,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>CD package</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -420,6 +463,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Grooveshark Spash Screen</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -436,6 +483,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Grooveshark Spash Screen</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -452,6 +503,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>iTunes Feature</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -468,6 +523,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>iTunes Feature</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -484,6 +543,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Digital Album Cover</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -500,6 +563,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Digital Album Cover</h3>
+                <ul>
+                  <li>Winter 2012</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -532,6 +599,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Open Project</h3>
+                <ul>
+                  <li>Fall 2008</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -548,6 +619,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Open Project</h3>
+                <ul>
+                  <li>Fall 2008</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -564,6 +639,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Self Portrait Project</h3>
+                <ul>
+                  <li>Winter 2010</li>
+                </ul>
               </div>
             </div>
           </div>
@@ -580,6 +659,10 @@
           <div class="wrapper textwrapper">
             <div class="info sizable">
               <div class="infoinner">
+                <h3>Found Image Project</h3>
+                <ul>
+                  <li>Summer 2009</li>
+                </ul>
               </div>
             </div>
           </div>
