--- a/portfolio.html
+++ b/portfolio.html
@@ -9,16 +9,16 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.localAssets = false;
+      window.localAssets = true;
     </script>
-    <script src="http://static.nkwalton.com/js/init.min.js"></script>
+    <script src="js/init.min.js"></script>
   </head>
   <body class="work">
     <header class="main">
@@ -70,7 +70,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_home" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/sg_home.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/sg_home.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -102,7 +102,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_tombstone" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/sg_tombstone.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/sg_tombstone.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -124,7 +124,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="sg_media" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/sg_media.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/sg_media.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -175,7 +175,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu-home" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/byu-home.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/byu-home.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -214,7 +214,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu_home-sizes" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/byu_home-sizes.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/byu_home-sizes.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -245,7 +245,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byu_style" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/byu_style.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/byu_style.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -288,7 +288,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byutickets_full" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/byutickets_full.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/byutickets_full.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -325,7 +325,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="byutickets-sizes2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/byutickets-sizes2.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/byutickets-sizes2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -368,7 +368,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-scores" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/ls-scores.png"/></noscript>
+              <noscript><img alt="" src="img/400w/ls-scores.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -384,7 +384,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-grader-exam" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/ls-grader-exam.png"/></noscript>
+              <noscript><img alt="" src="img/400w/ls-grader-exam.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -400,7 +400,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ls-grader" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/ls-grader.png"/></noscript>
+              <noscript><img alt="" src="img/400w/ls-grader.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -432,7 +432,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_cards" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_cards.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_cards.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -448,7 +448,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_brochure" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_brochure.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_brochure.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -464,7 +464,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis-all" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis-all.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis-all.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -480,7 +480,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_bible" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_bible.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_bible.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -506,7 +506,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_bible1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_bible1.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_bible1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -543,7 +543,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_society" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_society.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_society.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -572,7 +572,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_doves" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_doves.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_doves.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -603,7 +603,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="thesis_cases" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/thesis_cases.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/thesis_cases.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -635,7 +635,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs-zoom1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/bugs-zoom1.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/bugs-zoom1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -651,7 +651,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs_typographic" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/bugs_typographic.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/bugs_typographic.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -667,7 +667,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="bugs-all" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/bugs-all.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/bugs-all.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -699,7 +699,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love1" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/love1.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/love1.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -715,7 +715,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/love2.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/love2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -731,7 +731,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="love" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/love.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/love.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -767,7 +767,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_cover2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_cover2.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_cover2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -799,7 +799,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_case2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_case2.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_case2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -815,7 +815,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_pray" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_pray.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_pray.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -831,7 +831,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_storm2" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_storm2.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_storm2.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -847,7 +847,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_beach3" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_beach3.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_beach3.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -863,7 +863,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="jonah_colophon" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/jonah_colophon.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/jonah_colophon.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -912,7 +912,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="hardwork" data-ext=".png" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/hardwork.png"/></noscript>
+              <noscript><img alt="" src="img/400w/hardwork.png"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -932,7 +932,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="modernism" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/modernism.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/modernism.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -966,7 +966,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="suu-poster" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/suu-poster.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/suu-poster.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -996,7 +996,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="ornate_abuse_close" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/ornate_abuse_close.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/ornate_abuse_close.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
@@ -1041,7 +1041,7 @@
           </div>
           <div class="wrapper imagewrapper">
             <div class="image sizable"><img alt="" data-src="hatch" data-ext=".jpg" class="lazy responsive"/>
-              <noscript><img alt="" src="http://static.nkwalton.com/img/400w/hatch.jpg"/></noscript>
+              <noscript><img alt="" src="img/400w/hatch.jpg"/></noscript>
             </div>
           </div>
           <div class="wrapper textwrapper">
