--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
     <meta name="viewport" content="width=device-width, , initial-scale=1"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory-->
-    <link rel="shortcut icon" href="http://static.nkwalton.com/favicon.ico?v=3"/>
+    <link rel="shortcut icon" href="favicon.ico?v=3"/>
     <!-- Styles-->
-    <link rel="stylesheet" href="http://static.nkwalton.com/css/style.css"/>
+    <link rel="stylesheet" href="css/style.css"/>
     <!-- Scripts loaded via script loader. See notes in init.js file.-->
     <script type="text/javascript" src="//use.typekit.net/nyn3skg.js"></script>
     <script type="text/javascript">
       try{Typekit.load();}catch(e){};
-      window.localAssets = false;
+      window.localAssets = true;
     </script>
-    <script src="http://static.nkwalton.com/js/init.min.js"></script>
+    <script src="js/init.min.js"></script>
   </head>
   <body class="home">
     <header class="main">
